welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:25: error: value line is not a member of Unit
possible cause: maybe a semicolon is missing before `value line'?
        }line=false
         ^